# keystone-specs

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  requirements.txt  setup.cfg  setup.py  tox.ini
api/v2.0/: identity-api-v2.0-extensions.rst  identity-api-v2.0-faults.rst  identity-api-v2.0-paginated_collections.rst  identity-api-v2.0-request_and_response_formats.rst  identity-api-v2.0-versions.rst  identity-api-v2.0.rst
api/v3/: identity-api-v3-os-endpoint-policy.rst  identity-api-v3-os-ep-filter-ext.rst  identity-api-v3-os-federation-ext.rst  identity-api-v3-os-inherit-ext.rst  identity-api-v3-os-oauth1-ext.rst  identity-api-v3-os-revoke-ext.rst  identity-api-v3-os-trust-ext.rst  identity-api-v3.rst
attic/keystonemiddleware/: endpoint-enforcement-middleware.rst
attic/v2.0/: identity-api-v2.0-content_compression.rst
attic/v3/: identity-api-v3-os-federation-ext.rst  identity-api-v3-os-inherit-ext.rst  identity-api-v3-os-simple-certs-ext.rst  identity-api-v3-v2-comparison.rst  identity-api-v3.rst
doc/source/: conf.py  implemented.rst  index.rst
specs/: template.rst
specs/backlog/: README.rst  alembic.rst  bootstrap.rst  centralized-policies-fetch-cache.rst  decouple-auth-from-api-version.rst  dynamic-policies-delivering-mechanism.rst  functional-testing-setup.rst  implied-roles.rst  ldap3.rst  object-dependency-lifecycle.rst  online-schema-migration.rst  stable-driver-interfaces.rst  tree-deletion.rst  unified-delegation.rst  unscoped-catalog.rst
specs/juno/: audit-support-for-federation.rst  auth-specific-data.rst  endpoint-group-filter.rst  endpoint-policy.rst  endpoint-table-missing-reference-to-region-table.rst  filter-credentials-list.rst  generic-mapping-federation.rst  get-catalog.rst  hierarchical_multitenancy.rst  json-home.rst  keystone-to-keystone-federation.rst  multi-backend-uuids.rst  openid-connect.rst  role-assignment-notifications.rst  service-tokens.rst  trusts-redelegation.rst
specs/keystonemiddleware/: audit-middleware.rst  endpoint-enforcement-middleware.rst
specs/kilo/: abfab.rst  cadf-everywhere.rst  extra-optional.rst  federated-direct-user-mapping.rst  federation-token-scoping.rst  functional-testing.rst  klwt.rst  (+9 more)
superseded/: README.rst  token-provider-cleanup.rst
tests/: test_titles.py
(+118 files in other folders)
