[metadata]
name = identity-specs
summary = OpenStack Identity Program Development Specs
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://specs.openstack.org/openstack/keystone-specs/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html
warning-is-error = 1

[wheel]
universal = 1
